CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(TYPELIST)

SET(CMAKE_CXX_STANDARD 11)

SET(SOURCES
    typelist.hpp
    tests.cpp)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

ADD_EXECUTABLE(run_tests ${SOURCES})

ADD_CUSTOM_TARGET(format
    COMMAND clang-format -style=file -i ${SOURCES}
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
